<resources>
    <string name="app_name">HomeVisitNurseHVN</string>
    <string name="app_title">Home Visit Nurse</string>
    <string name="action_sign_in_short">Register</string>
    <string name="email">Email</string>
    <string name="minimum_password">Password too short, enter minimum 6 characters!</string>
    <string name="auth_failed">Authentication failed, check your email and password or sign up</string>
    <string name="send_password_reset_email">Send Password reset email</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="btn_login">LOGIN</string>
    <string name="prompt_password">Please enter your password</string>
    <string name="btn_link_to_register">Sign up here!</string>
    <string name="btn_link_to_login">Log in here!</string>
    <string name="btn_forgot_password">Forgot your password?</string>
    <string name="btn_reset_password">Reset Password</string>
    <string name="btn_back"><![CDATA[<< Back]]></string>
    <string name="forgot_password">Have you forgot password?</string>
    <string name="forgot_password_msg">Please enter your registered email, and we will sent you password reset instructions.</string>
    <string name="email_id">Email ID</string>
    <string name="btn_sign_out">Sign Out</string>
    <string name="click_cardview">Click me for more info.</string>
    <string name="info_title">Patients info</string>
    <string name="btn_find">FIND</string>
    <string name="user_instructions">If you are finished this therapy, you can write notes from this visit and order new visit by clicking the button WRITE.</string>
    <string name="btn_write">WRITE</string>
    <string name="btn_gallery">GALLERY</string>
    <string name="btn_take_a_photo">PHOTO</string>
    <string name="btn_take_a_photo1">TAKE A PHOTO</string>
    <string name="address">Address:</string>
    <string name="title_activity_maps">Map</string>
    <string name="save_title">Save data</string>
    <string name="btn_save">SAVE</string>
    <string name="hint_therapy">Therapy</string>
    <string name="hint_date">Datetype YYYY-MM-DD</string>
    <string name="hint_hour">Hour</string>
    <string name="hint_notes">Notes</string>


</resources>
