<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".WriteActivity">

    <TextView
        android:id="@+id/save_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="30sp"
        android:textColor="@color/colorPrimary"
        android:text="@string/save_title"
        android:textStyle="bold"
        android:gravity="center_horizontal"
        android:padding="10dp"
        />
    <EditText
        android:id="@+id/notes_edt"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:layout_below="@+id/save_title"
        android:paddingRight="5dp"
        android:paddingLeft="10dp"
        android:hint="@string/hint_notes"
        />
    <EditText
        android:id="@+id/therapy_edt"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:layout_below="@+id/notes_edt"
        android:hint="@string/hint_therapy"
        />
    <EditText
        android:id="@+id/date_edt"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:textColor="@color/black"
        android:layout_below="@+id/therapy_edt"
        android:paddingRight="5dp"
        android:paddingLeft="10dp"
        android:textStyle="bold"
        android:hint="@string/hint_date"
        />
    <EditText
        android:id="@+id/hour_edt"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:textColor="@color/black"
        android:layout_below="@+id/date_edt"
        android:paddingRight="5dp"
        android:paddingLeft="10dp"
        android:textStyle="bold"
        android:hint="@string/hint_hour"
        />
    <Button
        android:id="@+id/btn_save"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:textColor="@color/black"
        android:text="@string/btn_save"
        android:layout_below="@+id/hour_edt"
        android:layout_centerHorizontal="true"
        android:background="@color/btn_logut_bg"
        android:layout_marginTop="30dip"

        />
</RelativeLayout>