<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/info"
    tools:context=".InfoActivity">

    <TextView
        android:id="@+id/info_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="30sp"
        android:textColor="@color/colorPrimary"
        android:text="@string/info_title"
        android:textStyle="bold"
        android:gravity="center_horizontal"
        android:padding="10dp"
        />
    <TextView
        android:id="@+id/patient_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:layout_below="@id/info_title"
        android:paddingRight="5dp"
        android:paddingLeft="10dp"
        />
    <TextView
        android:id="@+id/patient_surname"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:layout_below="@id/info_title"
        android:layout_toRightOf="@id/patient_name"
        />
    <TextView
        android:id="@+id/patient_oib"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:textColor="@color/black"
        android:layout_below="@id/patient_name"
        android:paddingRight="5dp"
        android:paddingLeft="10dp"
        />
    <TextView
        android:id="@+id/patient_blood_type"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:textColor="@color/black"
        android:layout_below="@id/patient_oib"
        android:paddingRight="5dp"
        android:paddingLeft="10dp"
        />
    <TextView
        android:id="@+id/patient_history"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:textColor="@color/black"
        android:layout_below="@id/patient_blood_type"
        android:paddingRight="5dp"
        android:paddingLeft="10dp"
        />
    <TextView
        android:id="@+id/addressTxt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:textColor="@color/black"
        android:text="@string/address"
        android:layout_below="@id/patient_history"
        android:paddingRight="5dp"
        android:paddingLeft="10dp"
        android:paddingBottom="5dp"
        />
    <TextView
        android:id="@+id/patient_address"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:textColor="@color/black"
        android:layout_below="@id/patient_history"
        android:paddingRight="5dp"
        android:paddingBottom="5dp"
        android:layout_toRightOf="@id/addressTxt"
        />
    <Button
        android:id="@+id/btn_find"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:textColor="@color/black"
        android:text="@string/btn_find"
        android:layout_below="@id/patient_address"
        android:layout_centerHorizontal="true"
        android:background="@color/btn_logut_bg"
        />
    <TextView
        android:id="@+id/visit_date_txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:textColor="@color/black"
        android:layout_below="@id/btn_find"
        android:paddingRight="5dp"
        android:paddingLeft="10dp"
        android:paddingTop="5dp"
        />
    <TextView
        android:id="@+id/visit_hour_txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:textColor="@color/black"
        android:layout_below="@id/btn_find"
        android:layout_toRightOf="@id/visit_date_txt"
        android:paddingTop="5dp"
        />
    <TextView
        android:id="@+id/visit_therapy"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:textColor="@color/black"
        android:layout_below="@id/visit_hour_txt"
        android:paddingRight="5dp"
        android:paddingLeft="10dp"
        />
    <TextView
        android:id="@+id/visit_notes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:textColor="@color/black"
        android:layout_below="@id/visit_therapy"
        android:paddingRight="5dp"
        android:paddingLeft="10dp"
        />
    <TextView
        android:id="@+id/user_instructions"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="12sp"
        android:textColor="@color/black"
        android:text="@string/user_instructions"
        android:layout_below="@id/visit_notes"
        android:paddingRight="5dp"
        android:paddingLeft="10dp"
        android:paddingBottom="5dp"
        android:padding="5dp"
        />
    <Button
        android:id="@+id/btn_write"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:textColor="@color/black"
        android:text="@string/btn_write"
        android:layout_below="@id/user_instructions"
        android:layout_centerHorizontal="true"
        android:background="@color/btn_logut_bg"
        />

        <Button
            android:id="@+id/btn_take_a_photo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btn_take_a_photo"
            android:textColor="@color/black"
            android:background="@color/btn_logut_bg"
            android:layout_below="@id/btn_write"
            android:layout_marginTop="10dip"
            android:layout_centerHorizontal="true"


            />
</RelativeLayout>